--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
     "express": "^4.10.8",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "supertest": "^3.3.0"
+  },
+  "scripts":{
+    "start": "node server.js",
+    "test": "mocha --bail"
   }
 }
